# zlabs

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  README.md  autogen.sh  configure.ac  project.xml  version.sh
builds/android/: Android.mk
builds/mingw32/: Makefile.mingw32
builds/msvc/: resource.h  zlabs.rc
builds/msvc/vs2008/: zlabs.sln
builds/msvc/vs2008/zlabs/: zlabs.sln  zlabs.vcproj
builds/msvc/vs2010/: zlabs.sln
builds/msvc/vs2010/zlabs/: zlabs.props  zlabs.vcxproj  zlabs.vcxproj.filters
builds/msvc/vs2010/zlabs_selftest/: zlabs_selftest.vcxproj
builds/msvc/vs2012/: zlabs.import.xml  zlabs.sln
builds/msvc/vs2012/zlabs/: zlabs.vcxproj
builds/msvc/vs2012/zlabs_selftest/: zlabs_selftest.props  zlabs_selftest.vcxproj
builds/msvc/vs2013/: libczmq.import.props  libczmq.import.xml  zlabs.import.props  zlabs.import.xml  zlabs.sln
builds/msvc/vs2013/zlabs/: zlabs.vcxproj  zlabs.vcxproj.filters
builds/msvc/vs2013/zlabs_selftest/: zlabs_selftest.props  zlabs_selftest.vcxproj
builds/qt-android/: build.sh
doc/: Makefile.am  Makefile.am.supplement  asciidoc.conf  zlabs.txt  zpipe.doc  zpipe.txt  zpubsub.doc  zpubsub.txt  zpubsub_filter.doc  zpubsub_filter.txt  zpubsub_option.doc  zpubsub_option.txt
examples/zpubsub/protobuf/: participant.cc  participant.h  testMessage.pb.h  testPublisher  testPublisher.cc  testSubscriber  testSubscriber.cc  topic.h
examples/zpubsub/simple/: test_publisher  test_publisher.c  test_subscriber  test_subscriber.c
examples/zpubsub/zprototest/src/: test_publisher  test_publisher.c  test_subscriber  test_subscriber.c  zprototest_msg.c  zprototest_msg.xml
include/: platform.h  zlabs.h  zlabs_library.h  zlabs_prelude.h  zpipe.h  zpubsub.h  zpubsub_filter.h  zpubsub_option.h  ztimeout.h
model/: Makefile.am.supplement  zlabs-build-android.gsl  zlabs-build-cmake.gsl  zlabs-build-mingw32.gsl  zlabs-generate  zlabs-project.xml
src/: Makefile.am  Makefile.am.supplement  Makemodule.am  libzlabs.pc.in  zlabs_classes.h  zlabs_selftest  zlabs_selftest.c  zpipe.c  zpubsub.c  zpubsub_filter.bnf  zpubsub_filter.c  zpubsub_filter.xml  zpubsub_option.c  ztimeout.c
src/.libs/: libzlabs.lai  lt-zlabs_selftest  zlabs_selftest
